Starts support to configure image transformers.
