# remote_eink/display/controllers.py
@@ -5,7 +5,7 @@ from apscheduler.schedulers.background import BackgroundScheduler
 from apscheduler.schedulers.base import STATE_RUNNING
 
 from remote_eink.display.drivers import DisplayDriver, ListenableDisplayDriver, DisplayDriverEvent
-from remote_eink.transformers.common import ImageTransformer
+from remote_eink.transformers.transformers import ImageTransformer, ImageTransformerCollection
 from remote_eink.models import Image
 from remote_eink.storage.images import ImageStore, ListenableImageStore, ImageStoreEvent
 
@@ -28,6 +28,18 @@ class DisplayController:
     def current_image(self) -> Image:
         return self._current_image
 
+    @property
+    def driver(self) -> ListenableDisplayDriver:
+        return self._driver
+
+    @property
+    def image_store(self) -> ListenableImageStore:
+        return self._image_store
+
+    @property
+    def image_transformers(self) -> ImageTransformerCollection:
+        return self._image_transformers
+
     def __init__(self, driver: DisplayDriver, image_store: ImageStore, identifier: Optional[str] = None,
                  image_transformers: Sequence[ImageTransformer] = ()):
         """
@@ -38,15 +50,15 @@ class DisplayController:
         :param image_transformers: image display transformers
         """
         self.identifier = identifier if identifier is not None else str(uuid4())
-        self.driver = ListenableDisplayDriver(driver)
+        self._driver = ListenableDisplayDriver(driver)
         self._current_image = None
-        self.image_store = ListenableImageStore(image_store)
-        self.image_transformers = image_transformers
+        self._image_store = ListenableImageStore(image_store)
+        self._image_transformers = ImageTransformerCollection(image_transformers)
         self._display_requested = False
 
-        self.image_store.event_listeners.add_listener(self._on_remove_image, ImageStoreEvent.REMOVE)
-        self.driver.event_listeners.add_listener(self._on_clear, DisplayDriverEvent.CLEAR)
-        self.driver.event_listeners.add_listener(self._on_display, DisplayDriverEvent.DISPLAY)
+        self._image_store.event_listeners.add_listener(self._on_remove_image, ImageStoreEvent.REMOVE)
+        self._driver.event_listeners.add_listener(self._on_clear, DisplayDriverEvent.CLEAR)
+        self._driver.event_listeners.add_listener(self._on_display, DisplayDriverEvent.DISPLAY)
 
     def display(self, image_id: str):
         """
